--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -1,9 +1,14 @@
 .sign-in {
-    width: 30vw;
+    width: 32vw;
     display: flex;
     flex-direction: column;
 
     .title {
         margin: 10px 0;
+    }
+
+    .sign-in-buttons {
+        display: flex;
+        justify-content: space-between;
     }
 }
